@@ -25,7 +25,8 @@ R 2.1.1 patched
 ===============
 
 The progress bar was being left behind when a download was aborted.
-(PR#7964).
+(PR#7964).  In addition, it now retains its position from one download
+to the next, rather than always moving back to the center of the screen.
 
 
 
